Revert "Try fixing cell text alignment"
This reverts commit f859f29e4808d4c88a5f52f68065c03b1cffefcb.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,7 +82,8 @@ a {
     z-index: 0;
     background: var(--cell-background);
     outline: 0.5px solid var(--sheet-border);
-    padding: 0 var(--cell-padding) 0 var(--cell-padding);
+    padding: var(--cell-padding);
+    padding-top: 6px;
     font-family: "SpaceGrotesk";
     overflow: hidden;
     cursor: cell;
